[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/ItemsDialog.gd" type="Script" id=2]
[ext_resource path="res://src/UI/ItemSlot.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/StatsDisplay.tscn" type="PackedScene" id=4]

[node name="ItemsDialog" type="PopupPanel"]
pause_mode = 2
visible = true
margin_right = 424.0
margin_bottom = 320.0
rect_min_size = Vector2( 420, 320 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBox" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 384.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
custom_constants/separation = 16

[node name="Title" type="Label" parent="VBoxContainer/TitleBox"]
margin_right = 384.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "止血草（50金）"
align = 1

[node name="Display" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 384.0
margin_bottom = 159.0
rect_min_size = Vector2( 0, 135 )
custom_constants/separation = 12
alignment = 1

[node name="StatsLabel" type="Label" parent="VBoxContainer/Display"]
margin_top = 25.0
margin_right = 79.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "经验：
生命：
攻击：
防御："
align = 2

[node name="StatsValue" type="Label" parent="VBoxContainer/Display"]
margin_left = 91.0
margin_top = 25.0
margin_right = 135.0
margin_bottom = 110.0
rect_min_size = Vector2( 44, 0 )
text = "0
80
3
6"
align = 2

[node name="Description" type="Label" parent="VBoxContainer/Display"]
margin_left = 147.0
margin_top = 25.0
margin_right = 384.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 85 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "止血疗伤的草药"
autowrap = true
max_lines_visible = 4

[node name="StatsDisplay" parent="VBoxContainer/Display" instance=ExtResource( 4 )]
visible = false
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 0.0
margin_right = 294.0
margin_bottom = 135.0

[node name="Labels" parent="VBoxContainer/Display/StatsDisplay" index="0"]
margin_left = 0.0
margin_right = 100.0
margin_bottom = 135.0
custom_constants/separation = 0

[node name="Level" parent="VBoxContainer/Display/StatsDisplay/Labels" index="0"]
margin_top = 1.0
margin_bottom = 20.0

[node name="Exp" parent="VBoxContainer/Display/StatsDisplay/Labels" index="1"]
margin_top = 20.0
margin_bottom = 39.0

[node name="Hp" parent="VBoxContainer/Display/StatsDisplay/Labels" index="2"]
margin_top = 39.0
margin_bottom = 58.0

[node name="Atk" parent="VBoxContainer/Display/StatsDisplay/Labels" index="3"]
margin_top = 58.0
margin_bottom = 77.0

[node name="Def" parent="VBoxContainer/Display/StatsDisplay/Labels" index="4"]
margin_top = 77.0
margin_bottom = 96.0

[node name="Spd" parent="VBoxContainer/Display/StatsDisplay/Labels" index="5"]
margin_top = 96.0
margin_bottom = 115.0

[node name="Money" parent="VBoxContainer/Display/StatsDisplay/Labels" index="6"]
margin_top = 115.0
margin_bottom = 134.0

[node name="Values" parent="VBoxContainer/Display/StatsDisplay" index="1"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 135.0
custom_constants/separation = 0

[node name="Level" parent="VBoxContainer/Display/StatsDisplay/Values" index="0"]
margin_top = 1.0
margin_bottom = 20.0

[node name="Exp" parent="VBoxContainer/Display/StatsDisplay/Values" index="1"]
margin_top = 20.0
margin_bottom = 39.0

[node name="Hp" parent="VBoxContainer/Display/StatsDisplay/Values" index="2"]
margin_top = 39.0
margin_bottom = 58.0

[node name="Atk" parent="VBoxContainer/Display/StatsDisplay/Values" index="3"]
margin_top = 58.0
margin_bottom = 77.0

[node name="Def" parent="VBoxContainer/Display/StatsDisplay/Values" index="4"]
margin_top = 77.0
margin_bottom = 96.0

[node name="Spd" parent="VBoxContainer/Display/StatsDisplay/Values" index="5"]
margin_top = 96.0
margin_bottom = 115.0

[node name="Money" parent="VBoxContainer/Display/StatsDisplay/Values" index="6"]
margin_top = 115.0
margin_bottom = 134.0

[node name="ItemSlots" type="GridContainer" parent="VBoxContainer"]
margin_top = 163.0
margin_right = 384.0
margin_bottom = 259.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 8

[node name="ItemSlot" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]

[node name="ItemSlot2" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 48.0
margin_right = 96.0

[node name="ItemSlot3" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 96.0
margin_right = 144.0

[node name="ItemSlot4" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 144.0
margin_right = 192.0

[node name="ItemSlot5" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 192.0
margin_right = 240.0

[node name="ItemSlot6" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 240.0
margin_right = 288.0

[node name="ItemSlot7" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 288.0
margin_right = 336.0

[node name="ItemSlot8" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 336.0
margin_right = 384.0

[node name="ItemSlot9" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_top = 48.0
margin_bottom = 96.0

[node name="ItemSlot10" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 48.0
margin_top = 48.0
margin_right = 96.0
margin_bottom = 96.0

[node name="ItemSlot11" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 96.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 96.0

[node name="ItemSlot12" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 144.0
margin_top = 48.0
margin_right = 192.0
margin_bottom = 96.0

[node name="ItemSlot13" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 192.0
margin_top = 48.0
margin_right = 240.0
margin_bottom = 96.0

[node name="ItemSlot14" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 240.0
margin_top = 48.0
margin_right = 288.0
margin_bottom = 96.0

[node name="ItemSlot15" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 288.0
margin_top = 48.0
margin_right = 336.0
margin_bottom = 96.0

[node name="ItemSlot16" parent="VBoxContainer/ItemSlots" instance=ExtResource( 3 )]
margin_left = 336.0
margin_top = 48.0
margin_right = 384.0
margin_bottom = 96.0

[node name="Info" type="Label" parent="VBoxContainer"]
margin_top = 263.0
margin_right = 384.0
margin_bottom = 282.0
text = "现有25金"
align = 1

[editable path="VBoxContainer/Display/StatsDisplay"]
